# Robots

devel/lib/pkgconfig/: ros_course_examples.pc  ros_course_project.pc  ros_project2.pc  ros_project3.pc
devel/lib/ros_course_examples/: listener.py
devel/lib/ros_course_project/: gui.py
src/: frames.gv
src/ros_course_examples/: CMakeLists.txt  firstRVizFile.rviz  my_world  start_tf2_demo.launch  turtle_tf2_broadcaster.py
src/ros_course_examples/src/: basic_shapes.py
src/ros_course_project/: CMakeLists.txt  package.xml  project.launch
src/ros_project2/: CMakeLists.txt  README.txt  package.xml
src/ros_project2/launch/: move_base.launch
src/ros_project2/src/: frontiers.py  publisher.py  ros_goal.py
src/ros_project3/: .csv
src/ros_project3/Left turn 1000 episodes most recent/: Q_Table_episode_1002.csv  Q_Table_episode_1003.csv  Q_Table_episode_1005.csv  Q_Table_episode_1007.csv  Q_Table_episode_1008.csv  Q_Table_episode_1009.csv  Q_Table_episode_1010.csv  Q_Table_episode_1011.csv  Q_Table_episode_1012.csv  Q_Table_episode_1013.csv  Q_Table_episode_1015.csv  Q_Table_episode_1017.csv  Q_Table_episode_1018.csv  Q_Table_episode_1019.csv  Q_Table_episode_1020.csv  Q_Table_episode_1021.csv  Q_Table_episode_1022.csv  Q_Table_episode_1023.csv  Q_Table_episode_1024.csv  Q_Table_episode_1025.csv  Q_Table_episode_1027.csv  Q_Table_episode_1028.csv  Q_Table_episode_1029.csv  Q_Table_episode_1030.csv  Q_Table_episode_1031.csv  Q_Table_episode_1032.csv  Q_Table_episode_1033.csv  Q_Table_episode_1035.csv  Q_Table_episode_1036.csv  Q_Table_episode_1037.csv  (+923 more)
(+4585 files in other folders)
